--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../typescript-config/base.json"
+  "extends": "../typescript-config/base.json",
+  "compilerOptions": {
+    "types": ["jest"]
+  }
 }
