--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.4.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@frantic/core": "*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
